err/sqlhbase.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SqlHBase-0.4.egg-info'...
Listing './lib/python3.5/site-packages/fb303'...
Listing './lib/python3.5/site-packages/fb303_scripts'...
Compiling './lib/python3.5/site-packages/fb303_scripts/fb303_simple_mgmt.py'...
***   File "./lib/python3.5/site-packages/fb303_scripts/fb303_simple_mgmt.py", line 58
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/happybase'...
Listing './lib/python3.5/site-packages/happybase-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/hive_metastore'...
Compiling './lib/python3.5/site-packages/hive_metastore/ThriftHiveMetastore.py'...
***   File "./lib/python3.5/site-packages/hive_metastore/ThriftHiveMetastore.py", line 2987
    except AlreadyExistsException, o1:
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hive_serde'...
Listing './lib/python3.5/site-packages/hive_service'...
Compiling './lib/python3.5/site-packages/hive_service/ThriftHive.py'...
***   File "./lib/python3.5/site-packages/hive_service/ThriftHive.py", line 343
    except HiveServerException, ex:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hive_thrift_py-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/queryplan'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlhbase'...
Listing './lib/python3.5/site-packages/sqlhbase/borgs'...
Compiling './lib/python3.5/site-packages/sqlhbase/borgs/hbase.py'...
***   File "./lib/python3.5/site-packages/sqlhbase/borgs/hbase.py", line 14
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sqlhbase/borgs/hive.py'...
***   File "./lib/python3.5/site-packages/sqlhbase/borgs/hive.py", line 33
    except Thrift.TException, tx:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sqlhbase/hive.py'...
***   File "./lib/python3.5/site-packages/sqlhbase/hive.py", line 56
    except Thrift.TException, tx:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sqlhbase/merge'...
Compiling './lib/python3.5/site-packages/sqlhbase/merge/diff.py'...
***   File "./lib/python3.5/site-packages/sqlhbase/merge/diff.py", line 38
    print "\t - rows", len(data),
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sqlhbase/merge/stone.py'...
***   File "./lib/python3.5/site-packages/sqlhbase/merge/stone.py", line 15
    print ">", timestamp,
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sqlhbase/mysql.py'...
***   File "./lib/python3.5/site-packages/sqlhbase/mysql.py", line 86
    print self._raw[:self._idx].split()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sqlhbase/populate.py'...
***   File "./lib/python3.5/site-packages/sqlhbase/populate.py", line 87
    print "OVER-WRITING>", tbl_name, sqldump_key; sys.stdout.flush()
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sqlhbase/test'...
Listing './lib/python3.5/site-packages/thrift'...
Listing './lib/python3.5/site-packages/thrift/protocol'...
Listing './lib/python3.5/site-packages/thrift/reflection'...
Listing './lib/python3.5/site-packages/thrift/reflection/limited'...
Listing './lib/python3.5/site-packages/thrift/server'...
Compiling './lib/python3.5/site-packages/thrift/server/TServer.py'...
***   File "./lib/python3.5/site-packages/thrift/server/TServer.py", line 84
    except TTransport.TTransportException, tx:
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/thrift/transport'...
Compiling './lib/python3.5/site-packages/thrift/transport/TSocket.py'...
***   File "./lib/python3.5/site-packages/thrift/transport/TSocket.py", line 78
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/thriftpy'...
Listing './lib/python3.5/site-packages/thriftpy/contrib'...
Listing './lib/python3.5/site-packages/thriftpy/contrib/tracking'...
Listing './lib/python3.5/site-packages/thriftpy/parser'...
Listing './lib/python3.5/site-packages/thriftpy/protocol'...
Listing './lib/python3.5/site-packages/thriftpy/transport'...
Listing './lib/python3.5/site-packages/thriftpy/transport/buffered'...
Listing './lib/python3.5/site-packages/thriftpy/transport/framed'...
Listing './lib/python3.5/site-packages/thriftpy/transport/memory'...
Listing './lib/python3.5/site-packages/thriftpy-0.3.9.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
